# mgpdf

./: README.md  pyproject.toml
mgpdf/: __about__.py  mgpdf.py  pdfinfo.py  template.tex
src/mgpdf/: mgpdf.py  template.tex
tests/: __init__.py
